infrastructure/kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-backend
  namespace: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi-backend
  template:
    metadata:
      labels:
        app: fastapi-backend
    spec:
      serviceAccountName: backend-service-account
      
      containers:
      - name: fastapi-backend
        image: fastapi-backend:3.0
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: fastapi-backend-service
  namespace: backend
spec:
  selector:
    app: fastapi-backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: NodePort
